[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/font/Arcadepix Plus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/font/button.tres" type="DynamicFont" id=2]
[ext_resource path="res://offline_levels/manager.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 1 )

[node name="level4" type="Node2D"]
script = ExtResource( 3 )

[node name="score_board" type="Label" parent="."]
margin_left = 51.0
margin_top = 31.0
margin_right = 351.0
margin_bottom = 94.0
rect_min_size = Vector2( 300, 50 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Score:     / 5"
autowrap = true

[node name="score" type="Label" parent="."]
margin_left = 195.0
margin_top = 32.0
margin_right = 235.0
margin_bottom = 82.0
rect_min_size = Vector2( 40, 50 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
autowrap = true

[node name="clue" type="Label" parent="."]
margin_left = 151.0
margin_top = 125.0
margin_right = 1151.0
margin_bottom = 325.0
rect_min_size = Vector2( 1000, 150 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "CLUE"
autowrap = true

[node name="button_container" type="GridContainer" parent="."]
margin_left = 140.0
margin_top = 460.0
margin_right = 1140.0
margin_bottom = 660.0
rect_min_size = Vector2( 900, 200 )
custom_constants/hseparation = 200
columns = 3

[node name="lan_button" type="Button" parent="button_container"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
custom_fonts/font = ExtResource( 2 )
text = "LAN"

[node name="man_button" type="Button" parent="button_container"]
margin_left = 400.0
margin_right = 600.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
custom_fonts/font = ExtResource( 2 )
text = "MAN"

[node name="wan_button" type="Button" parent="button_container"]
margin_left = 800.0
margin_right = 1000.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
custom_fonts/font = ExtResource( 2 )
text = "WAN"

[connection signal="pressed" from="button_container/lan_button" to="." method="_on_lan_button_pressed"]
[connection signal="pressed" from="button_container/man_button" to="." method="_on_man_button_pressed"]
[connection signal="pressed" from="button_container/wan_button" to="." method="_on_wan_button_pressed"]
